--- a/taller prueba/fua.css
+++ b/taller prueba/fua.css
@@ -4,7 +4,7 @@
 }
 header{
 width: 100%;
-height: 95vh;
+height: 85vh;
 background: #e53935;  
 /* fallback for old browsers */
 background: -webkit-linear-gradient(to right,hsla(1, 71%, 62%, 0.673), hsla(1, 77%, 55%, 0.65)), url(../talle2/img/backoooooo.jpg);
@@ -17,4 +17,25 @@ position: relative;
 }
 .wave{
     position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+.contenedor .text{
+    display: flex;
+    height: 83vh;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+.text h1{
+    font-size: 6vw;
+    font-weight: 300;
+    color: #fff;
+}
+.text p{
+    font-size: 2vw;
+    color: #fff;
+    margin-top: 1%;
 }
