--- a/talle2/css/taller2.css
+++ b/talle2/css/taller2.css
@@ -59,7 +59,7 @@ header{
 /* RECURSOS DEL TALLER */
 
 
-section{
+/* section{
         height: 730px;
         display: flex;
         flex-wrap: wrap;
@@ -98,7 +98,7 @@ section{
         padding: 0 1rem;
         font-size: 16px;
         font-weight: 300px;
-    }
+    } */
    /*  INFORMACION DEL TALLERISTA */
     .inscribete{
 /*     width: 100%; */
