--- a/taller prueba/fua.css
+++ b/taller prueba/fua.css
@@ -1,3 +1,10 @@
+
+:root {
+    /* --max-width-global: 768px; */
+    --col: #ff0004;
+}
+
+
 *{
     margin: 0;
     padding: 0;
@@ -39,3 +46,185 @@ position: relative;
     color: #fff;
     margin-top: 1%;
 }
+.card{
+    position: relative;
+    width: 350px;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+/*     background-color: #333; */
+    border-radius: 29px;
+    transition-delay: 0.5s;
+}
+.card:hover{
+    width: 600px;
+    transition-delay: 0.5s;
+}
+.logo{
+    width: 40%;
+    height: 70%;
+}
+.card .circle{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card .circle::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 350px;
+    height: 350px;
+    border-radius: 50%;
+    background: #191919;
+    border: 8px solid var(--col);
+    filter: drop-shadow(0 0 10px var(--col)) drop-shadow(0 0 60px var(--col));
+    transition: 0.5s, backround 0.5s;
+    transition-delay: 0.75s;
+}
+.card:hover .circle::before{
+    transition-delay: 0.5s;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    background: var(--col);
+}
+.card .circle .logo{
+    position: relative;
+    width: 250px;
+    transition: 0.5s;
+    transition-delay: 0.5s;
+}
+.card:hover .circle .logo{
+    transform: scale(0);
+    transition-delay: 0s;
+}
+.card .funcion_img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(0) rotate(315deg);
+    height: 300px;
+    transition: 0.5s ease-in-out;
+}
+.card:hover .funcion_img{
+    transition-delay: 0.75s;
+    top: 25%;
+    left: 72%;
+    height: 300px;
+    transform: translate(-50%,-50%) scale(1) rotate(15deg);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* PARTE CARD ORIGIN JAVA */
+.recursos{
+    display: flex;
+    overflow-x: scroll;
+}
+.tarjeta{
+    width: 300px;
+    height: 300px;
+}
+.tarjeta img{
+    width: 90%;
+    height: 50%;
+    object-fit: cover;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* section{
+    width: 90%;
+    max-width: 10000px;
+    margin: auto;
+    overflow: hidden;
+    height: auto;
+    display: flex;
+    justify-content:center ;
+    margin-bottom: 40px;
+    margin-top: 40px;
+    border: solid var(--color-primario) 2px;
+}
+section .card_origin{
+    display: flex;
+    width: 100%;
+    margin: 10px;
+    animation: scroll 20s  infinite ;
+    -webkit-animation: scroll 20s infinite;
+}
+section .recursos{
+    text-align: center;
+    width: 100%;
+    height: 45vh;
+}
+section .recursos img{
+        width: 100%;
+        height: 50%;
+    
+}
+section .recursos h1{
+    font-size: 1.8rem;
+}
+@keyframes scroll {
+    0% {
+        -webkit-transform:translatex(2);
+        transform: translatex(2);
+    }
+    100% {
+        -webkit-transform:translatex(calc(-100% * 6)) ;
+        transform:translatex(calc(-100% * 6)) ;
+    }
+} */
+
+
+
+
+
+
+
+
+
