--- a/taller prueba/fua.css
+++ b/taller prueba/fua.css
@@ -1,7 +1,7 @@
 
 :root {
     /* --max-width-global: 768px; */
-    --col: #ff0004;
+    --col: #62ff0080;
 }
 
 
@@ -48,8 +48,8 @@ position: relative;
 }
 .card{
     position: relative;
-    width: 350px;
-    height: 350px;
+    width: 250px;
+    height: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,19 +59,21 @@ position: relative;
     transition-delay: 0.5s;
 }
 .card:hover{
-    width: 600px;
+    width: 500px;
     transition-delay: 0.5s;
 }
 .logo{
     width: 40%;
-    height: 70%;
+    height: 60%;
+    margin-left: 18%;
+    margin-top: 11%;
 }
 .card .circle{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     border-radius: 20px;
     display: flex;
     justify-content: center;
@@ -82,25 +84,25 @@ position: relative;
     position: absolute;
     top: 0;
     left: 0;
-    width: 350px;
-    height: 350px;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
-    background: #191919;
+    background: #ffffff;
     border: 8px solid var(--col);
-    filter: drop-shadow(0 0 10px var(--col)) drop-shadow(0 0 60px var(--col));
-    transition: 0.5s, backround 0.5s;
+    filter: drop-shadow(0 0 0px var(--col)) drop-shadow(0 0 20px var(--col));
+    transition: 0.5s, backround 0.5s;       
     transition-delay: 0.75s;
 }
 .card:hover .circle::before{
     transition-delay: 0.5s;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     border-radius: 20px;
     background: var(--col);
 }
 .card .circle .logo{
     position: relative;
-    width: 250px;
+    width: 150px;
     transition: 0.5s;
     transition-delay: 0.5s;
 }
@@ -110,16 +112,16 @@ position: relative;
 }
 .card .funcion_img{
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 40%;
+    left: 40%;
     transform: translate(-50%,-50%) scale(0) rotate(315deg);
-    height: 300px;
+    height: 200px;
     transition: 0.5s ease-in-out;
 }
 .card:hover .funcion_img{
     transition-delay: 0.75s;
-    top: 25%;
+    top: 15%;
     left: 72%;
-    height: 300px;
+    height: 200px;
     transform: translate(-50%,-50%) scale(1) rotate(15deg);
 }
