--- a/taller prueba/fua.css
+++ b/taller prueba/fua.css
@@ -1,9 +1,4 @@
 
-:root {
-    /* --max-width-global: 768px; */
-    --col: #62ff0080;
-}
-
 
 *{
     margin: 0;
@@ -120,8 +115,64 @@ position: relative;
 }
 .card:hover .funcion_img{
     transition-delay: 0.75s;
-    top: 15%;
+    top: 30%;
     left: 72%;
     height: 200px;
     transform: translate(-50%,-50%) scale(1) rotate(15deg);
+}
+.card .contenido{
+    position: absolute;
+    width: 50%;
+    left: 20%;
+    padding: 10px 20px 20px 10px;
+    opacity: 0;
+    transition: 0.5s;
+    visibility: hidden;
+
+}
+.card:hover .contenido{
+    transition-delay: 0.75s;
+    opacity: 1;
+    visibility: visible;
+    left: 0;
+}
+.card .contenido p{
+    color: #fff;
+    font-size: 1.2rem;
+}
+
+
+
+/* parte prueba para angular */
+.prueba{
+    position: relative;
+    width: 720px;
+    height: 830px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 30%;
+}
+.prueba .caja{
+    position: relative;
+    width: 110%;
+    height: 400px;
+    background: #e53935;
+    border-radius: 40px;
+}
+.prueba .caja:nth-child(2){
+    background-color: #2f00ff;
+    width: 100%;
+    height: 420px;
+}
+.prueba .circulo{
+    position: absolute;
+    top: 32%;
+    left: 6px;
+    transform: translate(-50%);
+    width: 280px;
+    height: 280px;
+    background: greenyellow;
+    border-radius: 50%;
+    border: 10px solid #fff;
 }
